# FoveatedVolumeRendering

./: .gitignore  CMakeLists.txt  FoveatedBenchmarks.ipynb  README.md  RaycastLight.pro  RaycastLight.sln  RaycastLight.vcxproj  colorutils.cpp  colorutils.h  colorwheel.cpp  colorwheel.h  datrawreader.cpp  datrawreader.h  hoverpoints.cpp  kernels.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openclglutilities.cpp  openclglutilities.h  openclutilities.cpp  openclutilities.h  rangesliderqt.cpp  rangesliderqt.h  transferfunctionwidget.cpp  transferfunctionwidget.h  volumerendercl.cpp  volumerendercl.h  volumerenderwidget.cpp  volumerenderwidget.h
inc/CL/: cl_ext.h
inc/painting/: arthurstyle.cpp  arthurwidgets.h  hoverpoints.cpp  hoverpoints.h  painting.pri
kernels/: volumeraycast.cl
lbg-stippling/: .clang-format  .gitignore  CMakeLists.txt  main.cpp  resources.qrc
lbg-stippling/src/: lbgstippling.cpp  lbgstippling.h  mainwindow.cpp  mainwindow.h  settingswidget.cpp  settingswidget.h  stippleviewer.cpp  stippleviewer.h  voronoidiagram.cpp  voronoidiagram.h
lib/: tobii_research.lib
src/core/: volumerendercl.cpp  volumerendercl.h
src/io/: datrawreader.cpp  datrawreader.h
src/kernel/: volumeraycast.cl
src/oclutil/: openclglutilities.cpp  openclglutilities.h  openclutilities.cpp  openclutilities.h
src/qt/: colorutils.cpp  colorwheel.cpp  hoverpoints.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  transferfunctionwidget.cpp  volumerenderwidget.cpp  volumerenderwidget.h
